# shopster

./: .env  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  DOCUMENTATION.md  TECHNICAL_ANALYSIS.md
examples/: basic_setup.rs  customer_workflow.rs  product_management.rs  shopping_workflow.rs
migrations/2021-03-23-214941_settings/: down.sql  up.sql
migrations/2021-03-25-190509_products/: down.sql  up.sql
migrations/2021-04-11-224552_users/: up.sql
migrations/2023-02-11-220644_orders/: down.sql  up.sql
migrations/2023-02-17-043519_DefaultSettings/: up.sql
migrations/2023-07-27-203627_basket/: down.sql  up.sql
migrations/2023-11-10-190049_customers/: up.sql
migrations/2023-12-27-183004_maintenance_mode/: up.sql
migrations/2026-02-07-210548-0000_order_status_rename/: down.sql  up.sql
migrations/2026-02-07-211000_order_items_snapshot/: up.sql
migrations/2026-02-10-000000_warehouse/: down.sql  up.sql
migrations/2026-02-10-010000_orders_customer_id/: down.sql  up.sql
migrations/2026-06-29-000000_stripe_webhook_secret/: down.sql  up.sql
migrations/2026-06-29-010000_orders_payment_reference/: down.sql  up.sql
migrations/2026-06-29-020000_order_cancelled_status/: down.sql  up.sql
migrations/2026-06-29-030000_order_payment_status/: down.sql  up.sql
src/: baskets.rs  customers.rs  error.rs  lib.rs  orders.rs  products.rs  schema.rs  settings.rs  warehouse.rs
src/postgresql/: dbbasket.rs  dbcustomer.rs  dbimage.rs  dborder.rs  dbproduct.rs  dbsettings.rs  dbtag.rs  dbwarehouse.rs  mod.rs
tests/: baskets_tests.rs  customer_tests.rs  integration_test.rs  order_tests.rs  warehouse_tests.rs
tests/common/: mod.rs
