[package]
name = "stec_shopster"
description = "Persistence layer for a shop system."
authors = ["Stefan Schick <stefan.schick@stecug.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://stecug.de"
version = "0.2.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.10"
diesel = { version = "2.3.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.3.1"

thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }

log = "0.4.29"
simple_logger = "5.1.0"

rand = "0.9.2"
rust-argon2 = "3.0.0"

serde = "1.0.228"
serde_json = "1.0.145"
serde_derive = "1.0.228"

stec_tenet = "0.3.0"


[dev-dependencies]
testcontainers-modules = { version = "0.14.0", features = ["postgres", "blocking"] }