[package]
name = "stec_shopster"
description = "Persistence layer for a shop system."
authors = ["Stefan Schick <stefan.schick@stecug.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://stecug.de"
repository = "https://github.com/stec-ug-haftungsbeschrankt/shopster"
version = "0.2.16"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.10"
diesel = { version = "2.3.10", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.3.2"

thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }

log = "0.4.32"
simple_logger = "5.2.0"

rand = "0.9.3"
rust-argon2 = "3.0.0"

serde = "1.0.228"
serde_json = "1.0.150"
serde_derive = "1.0.228"

stec_tenet = "0.3.2"

[dev-dependencies]
testcontainers-modules = { version = "0.15.0", features = ["postgres", "blocking"] }
