[package]
name = "stec_shopster"
description = "Persistence layer for a shop system."
authors = ["Stefan Schick <stefan.schick@stecug.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://stecug.de"
repository = "https://github.com/stec-ug-haftungsbeschrankt/shopster"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.3.10", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.9", features = ["postgres", "bb8"] }
diesel_migrations = "2.3.2"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }

log = "0.4.32"
simple_logger = "5.2.0"

rand = "0.10.1"
rust-argon2 = "3.0.0"

serde = "1.0.228"
serde_json = "1.0.150"
serde_derive = "1.0.228"

stec_tenet = "0.3.2"

[dev-dependencies]
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
